--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Server Configs
 export SECRET_KEY=change-me-insecure-key-NaBzqaUr3HV1QE
-export DEBUG=True
+export DEBUG=False
 export ALLOWED_HOSTS = ["*"] # use double quotes for json parsing
 
 # Postgres Configs 
