--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@ export SECRET_KEY=change-me-insecure-key-NaBzqaUr3HV1QE
 export DEBUG=False
 export ALLOWED_HOSTS = ["*"] # use double quotes for json parsing
 
+# JWT Configs 
+export JWT_SECRET_KEY=change-me-insecure-dCpfi7M5AFPA2O
+export JWT_ACCESS_KEY_TIMEOUT=2   # hours
+export JWT_REFRESH_KEY_TIMEOUT=1  # day
+
 # Postgres Configs 
 export POSTGRES_USER=social-network
 export POSTGRES_PASSWORD=change-me-insecure-password-NaBzqaUr3HV1QE
