feat: ratelimit by ip

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ export JWT_SECRET_KEY=change-me-insecure-dCpfi7M5AFPA2O
 export JWT_ACCESS_KEY_TIMEOUT=2   # hours
 export JWT_REFRESH_KEY_TIMEOUT=1  # day
 
+# Ratelimit scopes
+export AUTH_RATELIMIT=200/hour
+
 # Postgres Configs 
 export POSTGRES_USER=social-network
 export POSTGRES_PASSWORD=change-me-insecure-password-NaBzqaUr3HV1QE
