feat: add users and friends endpoints

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ export JWT_REFRESH_KEY_TIMEOUT=1  # day
 
 # Ratelimit scopes
 export AUTH_RATELIMIT=200/hour
+export FRIEND_REQUEST_RATELIMIT=3/minute
 
 # Postgres Configs 
 export POSTGRES_USER=social-network
@@ -34,3 +35,11 @@ export DOCKER_POSTGRES_PORT_FORWARD=127.0.0.1:5432 # ip:port to avoid exposing t
 export DOCKER_POSTGRES_CPUS=0
 export DOCKER_POSTGRES_MEMORY=0
 export DOCKER_POSTGRES_HEALTHCHECK_TEST=pg_isready -U social-network || exit 1
+
+# Redis Docker Configs 
+export DOCKER_REDIS_CPUS=0
+export DOCKER_REDIS_MEMORY=0
+export REDIS_PASSWORD=change-me-insecure
+
+# Misc
+export FRIEND_REQUEST_COOLDOWN_TIMEOUT=86400
