--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,29 @@ services:
     networks:
       - internal_network
 
+  redis:
+    deploy:
+      resources:
+        limits:
+          cpus: '${DOCKER_REDIS_CPUS:-0}'
+          memory: '${DOCKER_REDIS_MEMORY:-0}'
+    environment:
+      - 'REDIS_PASSWORD=${REDIS_PASSWORD}'
+    image: 'redis:7.0.5'
+    restart: '${DOCKER_RESTART_POLICY:-unless-stopped}'
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    stop_grace_period: '3s'
+    healthcheck:
+      test: ['CMD', 'redis-cli', '-a', '${REDIS_PASSWORD}', 'ping']
+      interval: 1m
+      timeout: 30s
+      retries: 5
+      start_period: 30s
+    volumes:
+      - 'redis:/data'
+    networks:
+      - internal_network
+
   api:
     build:
       context: .
@@ -42,6 +65,7 @@ services:
       - '.env'
     depends_on:
       - postgres
+      - redis
     tty: true
     healthcheck:
       test: '${DOCKER_API_HEALTHCHECK_TEST}'
@@ -61,6 +85,7 @@ services:
 
 volumes:
   postgres: {}
+  redis: {}
 
 networks:
   internal_network:
